--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
 
+
+##########################
+# LEADERS
+##########################
+
+PB_AME_john_curtin_Desc:0 "§YBorn:§! 8/1/1885\n\n§YJohn Curtin§! has been involved in the American political sphere from as young as 13, joining the Boston Trade Union after leaving school and eventually finding a job in the then young All-American Socialist League. However, his time in socialist politics quickly ended seeing that many held rather pro-war views during the Great War in a bid to earn more popular support nationally and abroad. John Curtin would politically bounce around until finally finding a place in the American Liberal Party. Semi-famous for his anti-war stance during the Great War, he was one of the few outspoken critics of Operation Overlord in American politics at the time. It is likely that this anti-war stance Curtin has adopted brought him the few extra necessary votes from the remaining American veteran population that earnt him the highest seat in politics.\n\nCurrently Curtin has campaigned on three promises, one is the total overhaul of the Commonwealth war debts that have piled high since the Treaty of Tours and stands as his most popular campaign point. Second is his determination to finally resolve the Southern Issue, a contentious political dream that scared many within the Liberal party from initially putting forward John Curtin as their Prime Minister of choice. And finally, there is the question of the Native reservations that he has promised to resolve once and for all."
+
 ##########################
 # TOOLTIPS
 ##########################
@@ -882,6 +889,10 @@ PB_AME_Debt_has_Its_Own_Benefit_flag:0 "Has completed focus §Y$PB_AME_Debt_has_
 PB_AME_North_American_Economic_Community_tt:0 "Any country who has a core in §YNorth America§! and is at peace with the United Commonwealth:"
 PB_AME_Expand_The_Fleet_tt:0 "Immediately gain:\n  2x Carriers £GFX_ship_carrier_icon_small\n\n  2x Cruisers £GFX_ship_battle_cruiser_icon_small\n"
 PB_AME_Listen_To_Halsey_tt:0 "§YWilliam Halsey Jr.§! will be unlocked as a Navy Chief"
+PB_AME_Crush_Corporate_America_tt:0 "The following megacorps will be §RPermanently§! removed:\n  -§YDolbear-Bell§!\n  -§YFord Motor Company§!\n  -§YUnion Standard Oil Company§!\n\nBecause of the immense size and global importance of the §HEIEC§! they shall remain intact.\n\n"
+PB_AME_Reverse_Native_Policy_tt:0 "§HSeminolia§!: Majority culture is Seminole"
+PB_AME_Address_The_Southern_Issue_tt:0 "Hasn't already resolved the Southern Issue"
+PB_AME_Indian_Provincial_Redistricting_tt:0 "§HSeminolia§!: Majority culture is Old Dixie"
 
 ##########################
 # PUPPET AUTONOMY
