--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -467,6 +467,76 @@ PB_AME_America_as_Christian_Nation:0 "Christian Soul to Nationhood"
 PB_AME_Social_Affairs_Directorate:0 "The Social Affairs Directorate"
 PB_AME_An_American_IBS_Alternative:0 "Homegrown Alternative to IBS"
 
+PB_AME_Americas_Longest_Day:0 "America's Longest Day"
+PB_AME_Americas_Longest_Day_desc:0 ""
+PB_AME_The_Reconstruction_Plan:0 "The Reconstruction Plan"
+PB_AME_The_Reconstruction_Plan_desc:0 ""
+PB_AME_Deal_With_The_Loyalists:0 "Deal With The Loyalists"
+PB_AME_Deal_With_The_Loyalists_desc:0 ""
+PB_AME_In_The_Footsteps_Of_Giants:0 "In The Footsteps Of Giants"
+PB_AME_In_The_Footsteps_Of_Giants_desc:0 ""
+PB_AME_Remit_Anti_Monarch_Measures:0 "Remit Anti-Monarch Measures"
+PB_AME_Remit_Anti_Monarch_Measures_desc:0 ""
+PB_AME_Ensure_Private_Citizenship:0 "Ensure Private Citizenship"
+PB_AME_Ensure_Private_Citizenship_desc:0 ""
+PB_AME_Dissolve_The_Royal_Houses:0 "Dissolve The Royal Houses"
+PB_AME_Dissolve_The_Royal_Houses_desc:0 ""
+PB_AME_Us_Or_Them:0 "Us Or Them"
+PB_AME_Us_Or_Them_desc:0 ""
+PB_AME_Honor_Our_Forefathers:0 "Honor Our Forefathers"
+PB_AME_Honor_Our_Forefathers_desc:0 ""
+PB_AME_Promote_Republicanism:0 "Promote Republicansim"
+PB_AME_Promote_Republicanism_desc:0 ""
+PB_AME_The_Better_America:0 "The Better America"
+PB_AME_The_Better_America_desc:0 ""
+PB_AME_Undying_Patriotism:0 "Undying Patriotism"
+PB_AME_Undying_Patriotism_desc:0 ""
+PB_AME_Bulwark_Against_Imperialism:0 "Bulwark Against Imperialsim"
+PB_AME_Bulwark_Against_Imperialism_desc:0 ""
+PB_AME_The_Republic_Marches_On:0 "The Republic Marches On"
+PB_AME_The_Republic_Marches_On_desc:0 ""
+PB_AME_Constitutional_Reform:0 "Constitutional Reform"
+PB_AME_Constitutional_Reform_desc:0 ""
+PB_AME_A_New_America_In_A_Familiar_World:0 "A New America In A Familiar World"
+PB_AME_A_New_America_In_A_Familiar_World_desc:0 ""
+PB_AME_The_American_Kingdom:0 "The American Kingdom"
+PB_AME_The_American_Kingdom_desc:0 ""
+PB_AME_Form_The_Kings_Guard:0 "Form The King's Guard"
+PB_AME_Form_The_Kings_Guard_desc:0 ""
+PB_AME_Empire_Ascendant:0 "Empire Ascendant"
+PB_AME_Empire_Ascendant_desc:0 ""
+PB_AME_The_New_World_Order:0 "The New World Order"
+PB_AME_The_New_World_Order_desc:0 ""
+PB_AME_Consolidate_The_Nation:0 "Consolidate The Nation"
+PB_AME_Consolidate_The_Nation_desc:0 ""
+PB_AME_Reassure_The_Barons:0 "Reassure The Barons"
+PB_AME_Reassure_The_Barons_desc:0 ""
+PB_AME_The_Peoples_King:0 "The People's King"
+PB_AME_The_Peoples_King_desc:0 ""
+PB_AME_The_Kingdom_Provides:0 "The Kingdom Provides"
+PB_AME_The_Kingdom_Provides_desc:0 ""
+PB_AME_America_Is_Whole:0 "America Is Whole"
+PB_AME_America_Is_Whole_desc:0 ""
+PB_AME_Found_The_Imperial_League:0 "Found The Imperial League"
+PB_AME_Found_The_Imperial_League_desc:0 ""
+PB_AME_Ensure_Continental_Supremacy:0 "Ensure Continental Supremacy"
+PB_AME_Ensure_Continental_Supremacy_desc:0 ""
+PB_AME_Intervene_In_Global_Affairs:0 "Intervene In Global Affairs"
+PB_AME_Intervene_In_Global_Affairs_desc:0 ""
+PB_AME_The_Giant_Wakes:0 "The Giant Wakes"
+PB_AME_The_Giant_Wakes_desc:0 ""
+PB_AME_Pax_Americana:0 "Pax Americana"
+PB_AME_Pax_Americana_desc:0 ""
+PB_AME_Supporting_Our_Allies:0 "Supporting Our Allies"
+PB_AME_Supporting_Our_Allies_desc:0 ""
+PB_AME_Empty_Our_Pockets:0 "Empty Our Pockets"
+PB_AME_Empty_Our_Pockets_desc:0 ""
+PB_AME_Beacon_of_Liberty:0 "Beacon Of Liberty"
+PB_AME_Beacon_of_Liberty_desc:0 ""
+PB_AME_Crush_Neo_Imperialist_Tyranny:0 "Crush Neo-Imperialist Tyranny"
+PB_AME_Crush_Neo_Imperialist_Tyranny_desc:0 ""
+PB_AME_Reach_Out_To_Latin_America:0 "Reach Out To Latin America"
+PB_AME_Reach_Out_To_Latin_America_desc:0 ""
 
 ##########################
 # MINISTERS
