a big american load

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -121,6 +121,9 @@
  AN_VARIANT_04:0 "§ODominant Party Democracy§!"
  AN_VARIANT_04_desc:0 "§ODominant Party Democracy§! is a system of governance wherein a single party rules without major opposition, even without the need for laws to restrict said opposition.\n\n This party hegemony may be born out of genuine popularity, or it may be born from there simply being no notable alternatives. In many cases, however, dominant party democracies tend to be defined by corruption and intimidation tactics to maintain control."
 
+ AN_VARIANT_05:0 "§OEdisonian Conservatism§!"
+ AN_VARIANT_05_desc:0 "§OEdisonian Conservatism§! refers to specific brand of American conservatism born out of Thomas Edison's brief, but influential, bid for the office of prime minister. Edisonian conservatives argue for greater influence of megacorporations on public offices, pushing a syncretic model where the line between company and country becomes blurred. More importantly, however, the Edisonian model advocates for technological progressivism, believing that a stable future can be created through this union of private enterprise and the state.\n\nThough some would call this a gross conflict of interest, Edisonian proponents argue that the megacorporations are here to stay, and as the world moves into an unknown future, it would be wise to have powerful allies."
+
  an_drift:0 "Daily drift towards Anarcho-Liberalism"
 
  ss:0 "State Socialists"
