--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -93,6 +93,8 @@ PB_AME_Decrease_Southerner_Radicalization_tt:0 "The £UC_SI_Southerners §YSouth
 PB_AME_Increase_Freedmen_Support_tt:0 "Support from the £UC_SI_Freedmen §YFreedmen§! will §Gincrease!§!\n\n"
 PB_AME_Decrease_Freedmen_Support_tt:0 "Support from the £UC_SI_Freedmen §YFreedmen§! will §Rdecrease!§!\n\n"
 
+AME_Melbourne_Acroplex_Overhaul_Project:0 "The Melbourne Acroplex Renewal Project"
+
 ##########################
 # IDEAS
 ##########################
@@ -124,10 +126,12 @@ PB_AME_Second_Empire_System_3_desc:0 "Legally speaking, the United Commonwealth 
 
 PB_AME_Crittenden_Compromise:0 "The Crittenden Compromise"
 PB_AME_Crittenden_Compromise_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
-PB_AME_Crittenden_Compromise_2:0 "The Crittenden Compromise"
+PB_AME_Crittenden_Compromise_2:0 "Crittenden Consolidated"
 PB_AME_Crittenden_Compromise_2_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
 PB_AME_Crittenden_Compromised:0 "Crittenden Compromised"
 PB_AME_Crittenden_Compromised_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
+PB_AME_Crittenden_Compromise1:0 "Renewed Crittenden Compromise"
+
 
 AME_Crittenden_Compromise_tt:0 "§YWhile this national spirit is active, we will be unable to change our§! §OMinority Rights§! §Ylaws without major pushback from either§! §OFreedmen Culture States§! §Yor§! §OOld Dixie Culture States§!"
 
@@ -169,6 +173,14 @@ PB_Bonus_Brigade_Cost_6:0 "Bonus Brigade Stipends"
 
 PB_AME_Founder_Of_NATO:0 "N.A.T.O"
 PB_AME_Fleet_Expansion:0 "Fleet Expansion"
+PB_AME_American_Renewal_Project_idea:0 "The American Renewal Project"
+PB_AME_Acroplex_Food_Streamlined:0 "Arcoplex Food Production Streamlined"
+PB_AME_Acroplex_Economic_Zones:0 "Arcoplex Special Economic Zones"
+PB_AME_Funding_Annexationism:0 "Funding Annexationism in Labrador"
+PB_AME_Southern_Budget_Readjustment:0 "Southern Budget Reallocation"
+PB_AME_Fourth_Southern_Pacification_Campaign:0 "The Fourth Southern Pacification Campaign"
+PB_AME_White_Armaments_Laws:0 "White Armaments Laws"
+PB_AME_White_Armaments_Laws2:0 "White Armaments Laws"
 
 ##########################
 # TECHNOLOGIES
@@ -284,9 +296,9 @@ PB_AME_Butler_as_Intermediary:0 "Choose Butler as Intermediary"
 PB_AME_Gradual_Bonus_Rollout:0 "Gradual Bonus Rollout"
 PB_AME_Reorganize_the_Bonus_Plan:0 "Total Bonus Plan Reorganization" 
 PB_AME_The_Special_Elections:0 "The Special Elections"
-PB_AME_The_Unionists_Stronger_than_Ever:0 "The Unionists, Stronger than Ever!"
+PB_AME_The_Unionists_Stronger_than_Ever:0 "Hell or High Water, the Unionists Remain"
 PB_AME_Align_with_the_Jersey_Clique:0 "Align with the Jersey Clique"
-PB_AME_Compromise_with_Southerners:0 "Compromise with Windsor"
+PB_AME_Compromise_with_Southerners:0 "Compromise with Southerners"
 PB_AME_American_Renewal_Project:0 "The American Renewal Project" 
 PB_AME_Eyes_to_the_West:0 "Eyes to the West"
 PB_AME_Revoke_the_Wartime_Language_Act:0 "Revoke the Wartime Language Act"
@@ -306,7 +318,7 @@ PB_AME_End_the_Arcology_War:0 "End the Arcology Wars"
 PB_AME_Drug_Capital_of_America:0 "Experimental Drug Facilities"
 PB_AME_Subterranean_Architecture:0 "Subterranean Architecture"
 PB_AME_Special_Economic_Zones:0 "Introduce the S.E.Z. Scheme"
-PB_AME_Clean_Windy_City:0 "The Clean Windy City"
+PB_AME_Clean_Windy_City:0 "Windy City Industrial Incentives"
 PB_AME_Eyes_to_the_North:0 "Eyes to the North"
 PB_AME_Expand_the_Boston_Metropole:0 "Expand the Boston Metropole"
 PB_AME_Focus_on_Old_Philly:0 "Focus on Old Philly"
@@ -314,7 +326,7 @@ PB_AME_Construct_the_Empire_City:0 "Construct the Empire City"
 PB_AME_The_Labrador_Purchase:0 "The Labrador Purchase"
 PB_AME_Fund_Annexationist_Parties:0 "Support Annexationist Parties"
 PB_AME_Joint_Administration_with_Montreal:0 "Joint Administration with Montréal"
-PB_AME_Promote_Newfoundland_Frenzy:0 "Promote the Newfoundland Frenzy"
+PB_AME_Promote_Newfoundland_Frenzy:0 "Newfoundland Funding Frenzy"
 PB_AME_Spurned_by_London:0 "Spurned by London"
 PB_AME_Induct_the_New_Provinces:0 "Induct the New Provinces"
 PB_AME_Eyes_to_the_South:0 "Eyes to the South"
@@ -819,6 +831,42 @@ Unicom.24.t:0 "An End To The Halibut Wars"
 Unicom.24.d:0 ""
 Unicom.24.a:0 "Another victory for diplomacy."
 
+Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
+Unicom_Elections.1.d:0 "PLACEHOLDER With the Crisis defeated by force, Coolidge faces harsh criticism from both sides of the aisle in parliament for using the military against American citizens."
+Unicom_Elections.1.a:0 "We prevented a revolution and THIS is the thanks we get?"
+
+Unicom_Elections.2.t:0 "Parliament passes a No Confidence Vote"
+Unicom_Elections.2.d:0 ""
+Unicom_Elections.2.a:0 "Silent Cal gets the boot"
+
+Unicom_Elections.3.t:0 "Philadelphia calls for Fresh Elections"
+Unicom_Elections.3.d:0 "PLACEHOLDER In order to shore up support, the Prime Minister calls for fresh parliamentary elections. In the ensuing process, the Conservatives can be upended by either of the other parties."
+Unicom_Elections.3.a:0 "Against all odds, the Federal-Unions remain."
+Unicom_Elections.3.b:0 "The Progressives finally get a win."
+Unicom_Elections.3.c:0 "Lang and the Workers all the way!"
+Unicom_Elections.3.e:0 "It's time for an alternative in office."
+
+Unicom_Conservatives.1.t:0 "The Federal-Unionist Party Congress"
+Unicom_Conservatives.1.d:0 ""
+Unicom_Conservatives.1.a:0 "We need to work with the Jersey Clique!"
+Unicom_Conservatives.1.b:0 "We need to bolster support from the South!"
+
+Unicom_Conservatives.2.t:0 "The State of the Midwest"
+Unicom_Conservatives.2.d:0 ""
+Unicom_Conservatives.2.a:0 "It's time to cut out the cancers afflicting the region."
+
+Unicom_Conservatives.3.t:0 "Cracking down on Arcoplex Bootleggers"
+Unicom_Conservatives.3.d:0 ""
+Unicom_Conservatives.3.a:0 "Crime doesn't pay!"
+
+Unicom_Conservatives.4.t:0 "The State of the North"
+Unicom_Conservatives.4.d:0 ""
+Unicom_Conservatives.4.a:0 "Well, at least it's not a total disaster."
+
+Unicom_Conservatives.5.t:0 "The State of the South"
+Unicom_Conservatives.5.d:0 ""
+Unicom_Conservatives.5.a:0 "Wow, it's somehow worse than we could have ever anticipated."
+
 Unicom_Nicaragua.1.t:0 "SITUATION REPORT - NICARAGUA"
 Unicom_Nicaragua.1.d:0 "CONFIDENTIAL\n\nSituation in Managua deteriorating at pace incompatible with projected Canal completion window. Assets indicate high probability of increased rebel attacks in immediate future. While the liquidation of High Interest Target Sandino proved effective in splintering Sandinista resistance, it has also emboldened other previously marginalized factions.\n\nStephenson's behavior continues to be erratic, and his taste in locals is becoming increasingly problematic. We still aren't able to identify the last one he invited to the presidential villa due to lack of access to local dental records. If we didn't need a useful idiot in charge, I would personally recommend immediate liquidation with extreme prejudice.\n\nThe remaining White Leaguers are little help in anti-insurgency operations. Current reports indicate they've managed to waste thousands of rounds of munitions shooting trees, wildlife, and in several cases their own genitals.\n\nIn short, our resources are limited and enemies growing in number. Stephenson must be removed once we have established a long term solution to rebel attacks. We cannot let it slip to London that the situation has degraded to this point.\n\nGod Save the Queen and God Bless America\nMANAGUA MJ-11 FORWARD COMMAND COMMAND\nEND REPORT"
 Unicom_Nicaragua.1.a:0 "Well...fuck."
@@ -896,6 +944,50 @@ Unicom_Revolution.6.t:0 "Southern Provinces Announce Intent to Secede"
 Unicom_Revolution.6.d:0 ""
 Unicom_Revolution.6.a:0 "Goddamn Dixie scum!"
 
+Unicom_Foreign_Policy.1.t:0 "A Curious Proposition"
+Unicom_Foreign_Policy.1.d:0 ""
+Unicom_Foreign_Policy.1.a:0 "Why not give it a try?"
+Unicom_Foreign_Policy.1.b:0 "Let's not push our luck too much."
+
+Unicom_Foreign_Policy.2.t:0 "Philadelphia making moves in Labrador"
+Unicom_Foreign_Policy.2.d:0 ""
+Unicom_Foreign_Policy.2.a:0 "Excuse me?"
+
+Unicom_Foreign_Policy.3.t:0 "The Americans want our help in Labrador?"
+Unicom_Foreign_Policy.3.d:0 ""
+Unicom_Foreign_Policy.3.a:0 "Anything to spur London, of course!"
+Unicom_Foreign_Policy.3.b:0 "We can't be involved in this."
+
+Unicom_Foreign_Policy.4.t:0 "Quebec agrees to support the Plebiscite"
+Unicom_Foreign_Policy.4.d:0 ""
+Unicom_Foreign_Policy.4.a:0 "Strange days when we're working with Frenchmen."
+
+Unicom_Foreign_Policy.5.t:0 "Quebec refuses to support the Plebiscite"
+Unicom_Foreign_Policy.5.d:0 ""
+Unicom_Foreign_Policy.5.a:0 "Can't trust the stupid Frenchmen with anything."
+
+Unicom_Foreign_Policy.6.t:0 "Quebec begins assisting the Americans"
+Unicom_Foreign_Policy.6.d:0 ""
+Unicom_Foreign_Policy.6.a:0 "We should have abolished that bloody commonwealth!"
+
+Unicom_Foreign_Policy.7.t:0 "The Labrador Plebiscite Fails!"
+Unicom_Foreign_Policy.7.d:0 ""
+Unicom_Foreign_Policy.7.a:0 "That couldn't have gone better."
+Unicom_Foreign_Policy.7.b:0 "That couldn't have gone worse."
+
+Unicom_Foreign_Policy.8.t:0 "The Labrador Plebiscite Succeeds!"
+Unicom_Foreign_Policy.8.d:0 ""
+Unicom_Foreign_Policy.8.a:0 "Fantastic!"
+
+Unicom_Foreign_Policy.9.t:0 "The Labrador Plebiscite Succeeds!"
+Unicom_Foreign_Policy.9.d:0 ""
+Unicom_Foreign_Policy.9.a:0 "You win this time, Americans."
+Unicom_Foreign_Policy.9.b:0 "Reject the results, there will be no insubordination!"
+
+Unicom_Foreign_Policy.10.t:0 "Britain rejects the Plebiscite results!"
+Unicom_Foreign_Policy.10.d:0 ""
+Unicom_Foreign_Policy.10.a:0 "They can't do that! Shoot them, or something!"
+
 ##########################
 # TOOLTIPS
 ##########################
@@ -906,6 +998,9 @@ PB_AME_START_TT_2:0 "§YThe tension down in Dixie is simply unsolveable for a si
 PB_AME_START_TT_3:0 "§YThe Crittenden compromise has brought severe injustice to all already unjust world. The segregation of black and white men along provincial lines, highlighted by the differences in federal funding and development, must end here. If we do not challenge segregation, then who will§!?"
 
 tooltip_AME_No_Butler_Support:0 "§YWithout Butler's support, we may have greater difficulty negotiating terms with the Legion.§!"
+PB_AME_Escalation_Dominance_Warning_tt:0 "§rWhile this option is more expedient, cracking down on American citizens, armed or otherwise, will severely damage our party's popularity!§!"
+PB_AME_Art_of_the_Deal_tt:0 "§rShow the country how much of a backbiting Washington you are and bend over backwards for a gang of bloodsucking revolutionaries and anarchists who will still put you up against a wall and piss on your corpse no matter how many compromises you end in their favor.§!\n\n"
+PB_AME_Art_of_the_Deal2_tt:0 "§YThis option will negatively impact our chances in the next election to a lesser degree.§!\n\n"
 tooltip_AME_Bonus_Brigade_Choice_Available_tt:0 "§YWe can now decide how we wish to tackle the Bonus Brigade Crisis§!"
 PB_Kick_Down_The_Gates_tt:0 "The stability hit from §HUnrest Missions§! will be lowered from §R-5%§! to §R-2%§!"
 PB_AME_Escalation_Dominance_tt:0 "\nThe §RBonus Brigade Crisis§! will come to an end\n\n"
@@ -963,6 +1058,26 @@ PB_AME_Crush_Corporate_America_tt:0 "The following megacorps will be §RPermanen
 PB_AME_Reverse_Native_Policy_tt:0 "§HSeminolia§!: Majority culture is Seminole"
 PB_AME_Address_The_Southern_Issue_tt:0 "Hasn't already resolved the Southern Issue"
 PB_AME_Indian_Provincial_Redistricting_tt:0 "§HSeminolia§!: Majority culture is Old Dixie"
+
+tooltip_AME_Edison_Alliance_tt:0 "§YBy working with the Jersey Clique, we will be strongly encouraged to make decisions that align with their interests.§!"
+tooltip_AME_Southern_Alliance_tt:0 "§YBy working with the Southerners, we will be strongly encouraged to make decisions that align with their interests.§!"
+
+PB_AME_Conservatives_Edisonians_Upset:0 "§rDue to our current cooperation with the Edisonian faction, choosing this option will incur negative effects.§!"
+PB_AME_Conservatives_Southerners_Upset:0 "§rDue to our current cooperation with the Southern faction, choosing this option will incur negative effects.§!"
+
+PB_AME_Conservatives_Edisonians_Happy:0 "§GDue to our current cooperation with the Edisonian faction, choosing this option will grant improved positive effects.§!"
+PB_AME_Conservatives_Southerners_Happy:0 "§GDue to our current cooperation with the Southern faction, choosing this option will grant improved positive effects.§!"
+
+PB_AME_Contradicting_Policy:0 "§rDue to contradicting our previously set stance on Segregation, taking this focus will incur significant penalties§!"
+PB_AME_Contradicting_Policy_Severe:0 "§rDue to contradicting our previously set stance on Segregation, taking this focus will incur harsh penalties§!"
+
+PB_AME_Labrador_Purchase_Approved_tooltip:0 "§YThe Labrador Purchase Proposal was approved.§!"
+
+PB_AME_Labrador_Annexation_Chance_Increase_tooltip:0 "§YThe chances of the Labrador Plebiscite succeeding will increase!§!"
+PB_AME_Labrador_Annexation_Chance_Increase_High_tooltip:0 "§YThe chances of the Labrador Plebiscite succeeding will increase significantly!§!"
+
+PB_ENG_Labrador_Plebiscite_Agreed_tooltip:0 "Britain §Gapproved§! the results of the Labrador Plebiscite!"
+PB_ENG_Labrador_Plebiscite_Rejected_tooltip:0 "Britain §Rrejected§! the results of the Labrador Plebiscite!"
 
 ##########################
 # PUPPET AUTONOMY
