--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -18,6 +18,12 @@ ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been compl
 AME_western_agriculture_decisions_tt:0 "£decision_icon_small Unlocks Decisions to Subsidize Farming in the West"
 
 ##########################
+# PARTIES
+##########################
+AME_DS_Provisional_long:0 "Provisional American Revolutionary Congress"
+AME_DS_Provisional:0 "Provisional Congress"
+
+##########################
 # DECISIONS
 ##########################
 PB_AME_Nicaragua_Occupation:0 "Nicaraguan Pacification Command"
@@ -181,6 +187,9 @@ PB_AME_Southern_Budget_Readjustment:0 "Southern Budget Reallocation"
 PB_AME_Fourth_Southern_Pacification_Campaign:0 "The Fourth Southern Pacification Campaign"
 PB_AME_White_Armaments_Laws:0 "White Armaments Laws"
 PB_AME_White_Armaments_Laws2:0 "White Armaments Laws"
+
+PB_AME_Reconstruction:0 "National Reconstruction"
+PB_AME_Let_The_Traitors_Leave:0 "Let The Traitors Leave"
 
 ##########################
 # TECHNOLOGIES
@@ -1078,6 +1087,8 @@ PB_AME_Labrador_Annexation_Chance_Increase_High_tooltip:0 "§YThe chances of the
 
 PB_ENG_Labrador_Plebiscite_Agreed_tooltip:0 "Britain §Gapproved§! the results of the Labrador Plebiscite!"
 PB_ENG_Labrador_Plebiscite_Rejected_tooltip:0 "Britain §Rrejected§! the results of the Labrador Plebiscite!"
+
+PB_AME_Americas_Longest_Day_tt:0 "\nAll previous national spirits will be §RRemoved§!"
 
 ##########################
 # PUPPET AUTONOMY
