AME Republic/Monarchy stuff

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -102,6 +102,34 @@ PB_AME_Decrease_Freedmen_Support_tt:0 "Support from the £UC_SI_Freedmen §YFree
 AME_Melbourne_Acroplex_Overhaul_Project:0 "The Melbourne Acroplex Renewal Project"
 
 ##########################
+# COSMETIC TAG
+##########################
+
+AME_REP_1:0 "United American Republic"
+AME_REP_1_DEF:0 "the United American Republic"
+AME_REP_1_ADJ:0 "American"
+
+AME_REP_2:0 "United American Republic"
+AME_REP_2_DEF:0 "the United American Republic"
+AME_REP_2_ADJ:0 "American"
+
+AME_REP_3:0 "United American Republic"
+AME_REP_3_DEF:0 "the United American Republic"
+AME_REP_3_ADJ:0 "American"
+
+AME_KNG_1:0 "Kingdom of America"
+AME_KNG_1_DEF:0 "the Kingdom of America"
+AME_KNG_1_ADJ:0 "American"
+
+##########################
+# COSMETIC TAG CUSTOM LOC
+##########################
+
+AME_REP_1_tt:0 "\n\n\n£GFX_AME_REP_1"
+AME_REP_2_tt:0 "\n\n\n£GFX_AME_REP_2"
+AME_REP_3_tt:0 "\n\n\n£GFX_AME_REP_3"
+
+##########################
 # IDEAS
 ##########################
 PB_AME_Breadbasket_of_Empire:0 "Breadbasket of the Empire"
@@ -997,6 +1025,27 @@ Unicom_Foreign_Policy.10.t:0 "Britain rejects the Plebiscite results!"
 Unicom_Foreign_Policy.10.d:0 ""
 Unicom_Foreign_Policy.10.a:0 "They can't do that! Shoot them, or something!"
 
+Unicom_Independent.1.t:0 "The First Presidential Referendum"
+Unicom_Independent.1.d:0 ""
+Unicom_Independent.1.a:0 "Robert Menzies (Conservative)"
+Unicom_Independent.1.b:0 "John D Rockefeller Jr. (AnLib)"
+Unicom_Independent.1.c:0 "Samuel Rosenman (Liberal)"
+Unicom_Independent.1.e:0 "Jack Lang (StateSoc)"
+Unicom_Independent.1.f:0 "Bob Semple (StateSoc)"
+
+Unicom_Independent.2.t:0 "The Flag Debate"
+Unicom_Independent.2.d:0 ""
+Unicom_Independent.2.a:0 "Option A"
+Unicom_Independent.2.b:0 "Option B"
+Unicom_Independent.2.c:0 "Option C"
+
+Unicom_Independent.3.t:0 "The Hunt For An American Monarch"
+Unicom_Independent.3.d:0 ""
+Unicom_Independent.3.a:0 "Prince Arthur of Connaught"
+Unicom_Independent.3.b:0 "Rupprecht, Crown Prince of Bavaria"
+Unicom_Independent.3.c:0 "Haakon VII of Norway"
+Unicom_Independent.3.e:0 "King Norton III"
+
 ##########################
 # TOOLTIPS
 ##########################
@@ -1089,6 +1138,9 @@ PB_ENG_Labrador_Plebiscite_Agreed_tooltip:0 "Britain §Gapproved§! the results 
 PB_ENG_Labrador_Plebiscite_Rejected_tooltip:0 "Britain §Rrejected§! the results of the Labrador Plebiscite!"
 
 PB_AME_Americas_Longest_Day_tt:0 "\nAll previous national spirits will be §RRemoved§!"
+
+PB_AME_In_The_Footsteps_Of_Giants_tt:0 "The §YUnited Commwealth§! will become a §HRepublic§!\n\n"
+PB_AME_The_American_Kingdom_tt:0 "The §YUnited Commwealth§! will become a §HConstitutional Monarchy§!\n\n"
 
 ##########################
 # PUPPET AUTONOMY
