--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -218,6 +218,13 @@ PB_AME_White_Armaments_Laws2:0 "White Armaments Laws"
 
 PB_AME_Reconstruction:0 "National Reconstruction"
 PB_AME_Let_The_Traitors_Leave:0 "Let The Traitors Leave"
+PB_AME_A_New_America:0 "A New America"
+
+##########################
+# TRAITS
+##########################
+trait_AME_Revolutionary_Hero:0 "American Revolutionary Hero"
+trait_AME_Revolutionary_Hero_desc:0 ""
 
 ##########################
 # TECHNOLOGIES
