--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -225,6 +225,7 @@ PB_AME_A_New_America:0 "A New America"
 ##########################
 trait_AME_Revolutionary_Hero:0 "American Revolutionary Hero"
 trait_AME_Revolutionary_Hero_desc:0 ""
+PB_The_First_American:0 "The First American"
 
 ##########################
 # TECHNOLOGIES
