--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -166,7 +166,6 @@ PB_AME_Crittenden_Compromised:0 "Crittenden Compromised"
 PB_AME_Crittenden_Compromised_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
 PB_AME_Crittenden_Compromise1:0 "Renewed Crittenden Compromise"
 
-
 AME_Crittenden_Compromise_tt:0 "§YWhile this national spirit is active, we will be unable to change our§! §OMinority Rights§! §Ylaws without major pushback from either§! §OFreedmen Culture States§! §Yor§! §OOld Dixie Culture States§!"
 
 PB_AME_Mississippi_Treaties:0 "The Calhoun-Melbourne Treaty"
@@ -550,8 +549,8 @@ PB_AME_Undying_Patriotism:0 "Undying Patriotism"
 PB_AME_Undying_Patriotism_desc:0 ""
 PB_AME_Bulwark_Against_Imperialism:0 "Bulwark Against Imperialsim"
 PB_AME_Bulwark_Against_Imperialism_desc:0 ""
-PB_AME_The_Republic_Marches_On:0 "The Republic Marches On"
-PB_AME_The_Republic_Marches_On_desc:0 ""
+PB_AME_Ban_The_Extremists:0 "Ban The Extremists"
+PB_AME_Ban_The_Extremists_desc:0 ""
 PB_AME_Constitutional_Reform:0 "Constitutional Reform"
 PB_AME_Constitutional_Reform_desc:0 ""
 PB_AME_A_New_America_In_A_Familiar_World:0 "A New America In A Familiar World"
@@ -762,11 +761,8 @@ AME_the_free_market_solves_all_issues_desc:0 ""
 AME_tradition_preserved:0 "Tradition Preserved"
 AME_tradition_preserved_desc:0 ""
 
-
 AME_the_aberhart_administration:0 "The Aberhart Administration"
 AME_the_aberhard_administration_desc:0 ""
-
-
 
 ##########################
 # EVENTS
@@ -1149,6 +1145,8 @@ PB_AME_Americas_Longest_Day_tt:0 "\nAll previous national spirits will be §RRem
 
 PB_AME_In_The_Footsteps_Of_Giants_tt:0 "The §YUnited Commwealth§! will become a §HRepublic§!\n\n"
 PB_AME_The_American_Kingdom_tt:0 "The §YUnited Commwealth§! will become a §HConstitutional Monarchy§!\n\n"
+
+PB_AME_Bulwark_Against_Imperialism_tt:0 "Every §Ycoastal§! province in the country will gain a series of §HNaval Forts§!\n\n"
 
 ##########################
 # PUPPET AUTONOMY
