pershing news event loc

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -934,6 +934,10 @@
   PBNews.236.d:0 "After years of unrest simmering beneath the surface, the Tejano-Americans have made themselves known in explosive fashion. The English speaking minority in Tejas has long pushed against the predominantly Catholic, Spanish speaking majority that dominates the Tejano legislative assembly. Said assembly failed to reach a resolution on the issue of American immigrant voting rights, leaving the situation in limbo and enraging Anglo-American nativists.\n\nClashes between the Tejano army and the Texan militias continue as both sides look to the East, waiting to see how Philadelphia will react."
   PBNews.236.a:0 "A house divided cannot stand."
 
+  PBNews.237.t:0 "EAST AFRICA CRISIS"
+  PBNews.237.d:0 "In a strange turn of events, Governor-General Pershing of the British East Africa Administration announced today that he would be transitioning the colony to a fully American administration. The decision has been a long time coming, as Pershing made clear his aim to transform the colony into a miniature America, importing advisors and American cultural mainstays.\n\nLondon, however, is livid, and a diplomatic duel with Philadelphia has ensued over who will be true master of East Africa."
+  PBNews.237.a:0 "How can someone be a loyalist AND a traitor?"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
